Fix room display (#306)
Make sure images don't overlap other text

* Improve layout padding

--- a/app/assets/stylesheets/components/homeowner/_rooms.scss
+++ b/app/assets/stylesheets/components/homeowner/_rooms.scss
@@ -39,8 +39,8 @@ $icon-color: #252C31;
     }
 
     .labels {
-      height: 85px;
       font-size: $base-font-size;
+      padding-top: $spacing-small / 2;
     }
 
     .label {
